--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 # --- Modules principaux de la nouvelle version ---
 eodag==2.11.0
 folium==0.15.1
-streamlit==1.44.1  # On conserve la version la plus récente
+streamlit==1.47.0  # Version avec auth native stable
 streamlit-chat==0.1.1
 streamlit-folium==0.18.0
 streamlit-shadcn-ui==0.1.18
 st-supabase-connection==2.1.0
-# streamlit-supabase-auth>=0.1.0  # Remplacé par auth native Streamlit
-Authlib>=1.3.2
+streamlit-supabase-auth>=0.1.0
 supabase==2.4.1
 stripe==8.8.0
 python-dotenv
